...
        icon: require('../../assets/images/appointment_With_Circle.png'),
        iconWithoutCircle: require('../../assets/homeScreenImages/appointment.png'),
        colors: '#FFF3ED',
        backgroundColor: '#FFD0B8',
        location: [0, 1],
        angel: 0,
        id: 'doctorBooking',
      },
      {
        title: strings('shared.homeScreen.houseTitle'),
        subTitle: strings('shared.homeScreen.houseSubTitle'),
        icon: require('../../assets/images/home_With_Circle.png'),
        iconWithoutCircle: require('../../assets/homeScreenImages/housecall.png'),
...
        icon: require('../../assets/images/ambulance_With_Circle.png'),
        iconWithoutCircle: require('../../assets/homeScreenImages/transport.png'),
        colors: '#FCEFF8',
        backgroundColor: '#FFC7EE',
        location: [0, 1],
        angel: 164,
        id: 'medicalTransport',
      },
      {
        title: strings('shared.homeScreen.CGTitle'),
        subTitle: strings('shared.homeScreen.CGSubTitle'),
        icon: require('../../assets/images/caregiver_With_Circle.png'),
        iconWithoutCircle: require('../../assets/homeScreenImages/caregiver.png'),
...
