...
                marginLeft: wp(3),
                width: parentWidth - (cCodeWidth + 10),
              }}
            >
              <TextInput
                allowFontScaling={false}
                testID="loginNumber"
                style={{
                  width: parentWidth - (cCodeWidth + 10),
                  color: AppColors.blackColor3,
                  fontSize: 20,
                  padding: hp(0.5),
                  textAlign: isRTL ? 'right' : 'auto',
...
            />
          )}         
          </View>
          <View></View>
        </View>
        <ProgressLoader
          testID={'progressLoaderLogin'}
          visible={this.state.isLoading}
          isModal={true}
          isHUD={true}
          hudColor={'#FFFFFF'}
          color={AppColors.primaryColor}
        />
...
