...

  static myClnqVersionName = Platform.OS === 'ios' ? '2.10.0(1)' : DeviceInfo.getVersion();

  static key = {
    key: 'key',
    request: 'request',
    medicalEquipment: 'medical_equipment',
    vitalSubscription: 'vital_subscription',
    caregiver: 'caregiver',
    appointment: 'appointment',
    equipment: 'equipment',
    vital: 'vital',
    trip: 'trip',
    medicine: 'medicine',
    ePrescription: 'ePrescription',
...
