...
        btnStyle = styles.borderBtn;
        break;
    }

    return (
      <TouchableHighlight
        testID="loginPress"
        onPress={this.onBtnClick.bind(this)}
        style={[
          btnStyle,
          {
            height: moderateScale(this.props.height),
            width: moderateScale(this.props.width),
...
